--- a/index.html
+++ b/index.html
@@ -8,134 +8,151 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/application.js"></script>
+<!--     // <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script> -->
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body>
+  <div class='bg'>
+  <div class="container">
+     <audio src="csgo.mp3" autoplay controls></audio>
     <section id="items-list" class="container">
       <div class="row">
-        <div class="cart-title col-xs-6 col-xs-offset-3">
+        <div class="cart-title col-xs-9 col-xs-offset-1">
           <h1>
-          Shopping Cart
+          Counter-Strike: Global Offensive
           </h1>
+          <h3>Buy Menu</h3>
         </div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Salmon
+        <div id="ak" class="item-name col-xs-3">
+          AK-47 <img src='images/ak.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $60.00
+        <div class="item-price col-xs-3" data-price="2700">
+          $2700
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type="number" class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Tuna
+        <div id="m4" class="item-name col-xs-3">
+          M4A1-S <img src='images/m4.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $50.00
+        <div class="item-price col-xs-3" data-price="3100">
+          $3100
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type="number" class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Carp
+        <div id="awp" class="item-name col-xs-3">
+          AWP <img src='images/awp.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $40.00
+        <div class="item-price col-xs-3" data-price="4750">
+          $4750
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type='number' class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Pork
+        <div id="g3sg1" class="item-name col-xs-3">
+          G3SG1 <img src='images/g3sg1.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $50.00
+        <div class="item-price col-xs-3" data-price="5000">
+          $5000
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type="number" class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Beef
+        <div id="scar" class="item-name col-xs-3">
+          SCAR-20 <img src='images/scar.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $40.00
+        <div class="item-price col-xs-3" data-price="5000">
+          $5000
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type="number" class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Chicken
+        <div id="galil" class="item-name col-xs-3">
+          Galil AR <img src='images/galil.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $25.00
+        <div class="item-price col-xs-3" data-price="2000">
+          $2000
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type="number" class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Cereal
+        <div id="famas" class="item-name col-xs-3">
+          FAMAS <img src='images/famas.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $45.00
+        <div class="item-price col-xs-3" data-price="2250">
+          $2250
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type="number" class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Milk
+        <div id="deagle" class="item-name col-xs-3">
+          Desert Eagle <img src='images/deagle.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $20.00
+        <div class="item-price col-xs-3" data-price="700">
+          $700
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type="number" class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
-          Sugar
+        <div id="tec9" class="item-name col-xs-3">
+          Tec-9 (Rekt-9) <img src='images/tec9.jpg'>
         </div>
-        <div class="item-price col-xs-3">
-          $10.00
+        <div class="item-price col-xs-3" data-price="500">
+          $500
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
-          <input class="quantity">
+          <input type="number" class="quantity">
         </div>
+        <div class="item-subtotal col-xs-3">$--.--</div>
       </div>
       <div class="row">
-        <div class="col-xs-3 col-xs-offset-9">
-          <button id="calc-prices-button" type="button" data-button='{"id": "3424"}' class="btn btn-success">
-            Calculate Prices
-          </button>
+        <div id="button1" class="col-xs-12">
+        <form action="" method="post">
+          <center><button id="gogogo" type="button" onclick="playIt();" data-button='{"id": "3424"}' class="btn btn-success">
+            Go Go Go!
+          </button></center>
+<!--           <div id="buttonmp3"></div> -->
+          </form>
         </div>
       </div>
       <div class="row">
@@ -146,8 +163,13 @@
           <div id="total-price">
             $--.--
           </div>
-        </div>
+      
       </div>
     </section>
+    </div>
+    </div>
+
+  </div>
+    
   </body>
 </html>
