--- a/index.html
+++ b/index.html
@@ -14,128 +14,249 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
+
   <body>
+
     <section id="items-list" class="container">
       <div class="row">
         <div class="cart-title col-xs-6 col-xs-offset-3">
           <h1>
           Shopping Cart
           </h1>
-        </div>
+        </div> 
+<!-- button 1 -->
+<!--         <input type="text" placeholder="Quantity ordered" class="quantity-top">
+        <button class="buttonRow">
+          Calculate!
+        </button> -->
+<!-- button 2 -->
+        <!-- <input type="text" placeholder="Quantity ordered2" class="quantity2"> -->
+        <!-- <button class="buttonQuant">
+          Calculate2!
+        </button> -->
+<!-- button 3 --><!-- 
+        <input type="text" placeholder="Quantity ordered2" class="quantity2">
+        <button class="buttonRowT">
+          Calculate2!
+        </button>
+ -->
+         <!--  <input type="text" placeholder="Arrays..." class="arrays">
+            <button class="buttonToArray">
+              Calculate Array!;
+            </button>
+          --> 
       </div>
+
       <div class="row">
-        <div class="item-name col-xs-6">
-          Salmon
+        <div class="item-name col-xs-4">
+        Salmon
         </div>
+
         <div class="item-price col-xs-3">
-          $60.00
+        $60.00
+        </div>
+        <div>
+ <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
         </div>
         <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
+        <label>QTY</label>
+        <input class="quantity">
         </div>
+
       </div>
+
       <div class="row">
-        <div class="item-name col-xs-6">
+
+        <div class="item-name col-xs-4">
           Tuna
         </div>
+
         <div class="item-price col-xs-3">
           $50.00
         </div>
+        <div>
+ <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
+        </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity">
         </div>
+
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
+        <div class="item-name col-xs-4">
           Carp
         </div>
         <div class="item-price col-xs-3">
           $40.00
         </div>
+                <div>
+ <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
+        </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity">
         </div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
+        <div class="item-name col-xs-4">
           Pork
         </div>
         <div class="item-price col-xs-3">
           $50.00
         </div>
+                <div>
+ <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
+        </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity">
         </div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
+        <div class="item-name col-xs-4">
           Beef
         </div>
         <div class="item-price col-xs-3">
           $40.00
         </div>
+                <div>
+ <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
+        </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity">
         </div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
+        <div class="item-name col-xs-4">
           Chicken
         </div>
         <div class="item-price col-xs-3">
           $25.00
         </div>
+                <div>
+ <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
+        </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity">
         </div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
+        <div class="item-name col-xs-4">
           Cereal
         </div>
         <div class="item-price col-xs-3">
           $45.00
         </div>
+                <div>
+ <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
+        </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity">
         </div>
       </div>
       <div class="row">
-        <div class="item-name col-xs-6">
+        <div class="item-name col-xs-4">
           Milk
         </div>
         <div class="item-price col-xs-3">
           $20.00
         </div>
+                <div>
+ <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
+        </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity">
         </div>
       </div>
+
       <div class="row">
-        <div class="item-name col-xs-6">
+        <div class="item-name col-xs-4">
           Sugar
         </div>
         <div class="item-price col-xs-3">
           $10.00
         </div>
+        <div>
+        <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
+                <div class="item-qty col-xs-3">
+          <label>QTY</label>
+          <input class="quantity">
+        </div>
+        </div>
+        
+
+      </div>
+
+      <div class="row">
+        <div class="item-qty col-xs-4">
+        <input class="quantity">
+        </div>
+
+        <div class="item-qty col-xs-3">
+          <input class="quantity">
+        </div>
+         <button class="col-xs-2 buttonCan btn btn-default">
+          Cancel
+        </button>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity">
         </div>
+
       </div>
+
+
+      <div class="row">
+        <div class="col-xs-4"> 
+        </div>
+        <div class="col-xs-3"> 
+        </div>
+        <div class="col-xs-2">
+          <button class="buttonCan btn btn-primary">
+          Create
+          </button>
+        </div>
+        <div class="col-xs-3"> </div>
+      </div>
+
+
       <div class="row">
         <div class="col-xs-3 col-xs-offset-9">
-          <button id="calc-prices-button" type="button" data-button='{"id": "3424"}' class="btn btn-success">
-            Calculate Prices
+          <button id="reset-button" type="button" data-button='{"id": "3424"}' class="btn btn-default">
+            Clear Form
           </button>
+         <!--  <button id="calc-prices-button" type="button" data-button='{"id": "3424"}' class="btn btn-success">
+            Calculate Prices Old
+          </button> -->
+            <button class="buttonQuant btn btn-success">
+          Calculate Prices
+        </button>
+                   <button id="total-price btn btn-danger">
+          Replace Total!
+        </button>
         </div>
       </div>
       <div class="row">
@@ -146,6 +267,7 @@
           <div id="total-price">
             $--.--
           </div>
+
         </div>
       </div>
     </section>
