--- a/index.html
+++ b/index.html
@@ -47,201 +47,140 @@
           --> 
       </div>
 
-      <div class="row">
-        <div class="item-name col-xs-4">
-        Salmon
-        </div>
+  <div class="row">
+    <div class="item-name col-xs-4"> Salmon </div>
+    <div class="item-price col-xs-3"> $60.00 </div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-        <div class="item-price col-xs-3">
-        $60.00
-        </div>
-        <div>
- <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        </div>
-        <div class="item-qty col-xs-3">
-        <label>QTY</label>
-        <input class="quantity">
-        </div>
+  <div class="row">
+    <div class="item-name col-xs-4">Tuna</div>
+    <div class="item-price col-xs-3">$50.00</div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-      </div>
+  <div class="row">
+    <div class="item-name col-xs-4">Carp</div>
+    <div class="item-price col-xs-3">$40.00</div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-      <div class="row">
+  <div class="row">
+    <div class="item-name col-xs-4">Pork</div>
+    <div class="item-price col-xs-3">$50.00</div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-        <div class="item-name col-xs-4">
-          Tuna
-        </div>
+  <div class="row">
+    <div class="item-name col-xs-4">Beef</div>
+    <div class="item-price col-xs-3">$40.00</div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel
+    </button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-        <div class="item-price col-xs-3">
-          $50.00
-        </div>
-        <div>
- <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        </div>
-        <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
+  <div class="row">
+    <div class="item-name col-xs-4">Chicken</div>
+    <div class="item-price col-xs-3">$25.00</div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-      </div>
-      <div class="row">
-        <div class="item-name col-xs-4">
-          Carp
-        </div>
-        <div class="item-price col-xs-3">
-          $40.00
-        </div>
-                <div>
- <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        </div>
-        <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
-      </div>
-      <div class="row">
-        <div class="item-name col-xs-4">
-          Pork
-        </div>
-        <div class="item-price col-xs-3">
-          $50.00
-        </div>
-                <div>
- <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        </div>
-        <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
-      </div>
-      <div class="row">
-        <div class="item-name col-xs-4">
-          Beef
-        </div>
-        <div class="item-price col-xs-3">
-          $40.00
-        </div>
-                <div>
- <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        </div>
-        <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
-      </div>
-      <div class="row">
-        <div class="item-name col-xs-4">
-          Chicken
-        </div>
-        <div class="item-price col-xs-3">
-          $25.00
-        </div>
-                <div>
- <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        </div>
-        <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
-      </div>
-      <div class="row">
-        <div class="item-name col-xs-4">
-          Cereal
-        </div>
-        <div class="item-price col-xs-3">
-          $45.00
-        </div>
-                <div>
- <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        </div>
-        <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
-      </div>
-      <div class="row">
-        <div class="item-name col-xs-4">
-          Milk
-        </div>
-        <div class="item-price col-xs-3">
-          $20.00
-        </div>
-                <div>
- <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        </div>
-        <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
-      </div>
+  <div class="row">
+    <div class="item-name col-xs-4">Cereal</div>
+    <div class="item-price col-xs-3">$45.00</div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-      <div class="row">
-        <div class="item-name col-xs-4">
-          Sugar
-        </div>
-        <div class="item-price col-xs-3">
-          $10.00
-        </div>
-        <div>
-        <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-                <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
-        </div>
-        
+  <div class="row">
+    <div class="item-name col-xs-4">Milk</div>
+    <div class="item-price col-xs-3">$20.00</div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-      </div>
+  <div class="row">
+    <div class="item-name col-xs-4">Sugar</div>
+    <div class="item-price col-xs-3">$10.00</div>
+    <div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    </div>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="quantity">
+    </div>
+  </div>
 
-      <div class="row">
-        <div class="item-qty col-xs-4">
-        <input class="quantity">
-        </div>
+  <div class="row">
+    <div class="item-qty col-xs-4">
+      <input class="">
+    </div>
+    <div class="item-qty col-xs-3">
+      <input class="">
+    </div>
+      <button class="col-xs-2 buttonCan btn btn-default">Cancel</button>
+    <div class="item-qty col-xs-3">
+      <label>QTY</label>
+      <input class="">
+    </div>
+  </div>
 
-        <div class="item-qty col-xs-3">
-          <input class="quantity">
-        </div>
-         <button class="col-xs-2 buttonCan btn btn-default">
-          Cancel
-        </button>
-        <div class="item-qty col-xs-3">
-          <label>QTY</label>
-          <input class="quantity">
-        </div>
-
-      </div>
-
-
-      <div class="row">
-        <div class="col-xs-4"> 
-        </div>
-        <div class="col-xs-3"> 
-        </div>
-        <div class="col-xs-2">
-          <button class="buttonCan btn btn-primary">
-          Create
-          </button>
-        </div>
-        <div class="col-xs-3"> </div>
-      </div>
-
+  <div class="row">
+    <div class="col-xs-4"> 
+    </div>
+    <div class="col-xs-3"> 
+    </div>
+    <div class="col-xs-2">
+      <button class="buttonCan btn btn-primary">Create</button>
+    </div>
+    <div class="col-xs-3"> 
+    </div>
+  </div>
 
       <div class="row">
         <div class="col-xs-3 col-xs-offset-9">
@@ -254,7 +193,7 @@
             <button class="buttonQuant btn btn-success">
           Calculate Prices
         </button>
-                   <button id="total-price btn btn-danger">
+         <button id="total-price btn btn-danger">
           Replace Total!
         </button>
         </div>
